@@ -2,3 +2,7 @@
 A versão V1 do jogo de zumbi feita para o projeto de engenharia de computação da FACAMP
 Essa versão foi feita usando o [greenfoot](https://www.greenfoot.org/door).
 Sinta-se à vontade para baixar o jogo e fazer as alterações julgadas necessárias. (Licença MIT) 
+
+Para executar o jogo com JAR
+
+    "C:\Program Files\Greenfoot\jdk\bin\java.exe" -cp "C:\Program Files\Greenfoot\lib\javafx\lib\javafx.base.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.controls.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.media.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.properties.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.swing.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.web.jar;C:\Users\heito\Desktop\jogo em jar\jogozumbiv1.jar" --module-path "C:\Program Files\Greenfoot\lib\javafx\lib" --add-modules=ALL-MODULE-PATH greenfoot.export.GreenfootScenarioApplication
